--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -1,6 +1,6 @@
 browser = chrome
 url = https://demo.opencart.com/index.php?route=account/login
-username = naveenanimation20@gmail.com
+username = dineshkv_12@yahoo.co.in
 password = Selenium12345
 headless = false
 incognito = false
