--- a/src/test/resources/config/stage.config.properties
+++ b/src/test/resources/config/stage.config.properties
@@ -3,5 +3,5 @@ url = https://demo.opencart.com/index.php?route=account/login
 username = nidhi.priya17@gmail.com
 password = Selenium@123
 headless = false
-incognito = true
+incognito = false
 highlight = false
