Restored config file value

--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -4,4 +4,4 @@ username = dineshkv_12@yahoo.co.in
 password = Selenium12345
 headless = false
 incognito = false
-highlight = false
+highlight = true
